--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="black200">#474747</color>
+    <color name="green">#8BC34A</color>
+    <color name="blue_cream">#2196F3</color>
+    <color name="blue_dark">#06528E</color>
 </resources>
