add read only json file in release

--- a/app/src/main/res/layout/add_task_layout.xml
+++ b/app/src/main/res/layout/add_task_layout.xml
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:hint="Название"
-        android:textSize="24sp"
+        android:hint="@string/name_task_hint"
+        android:textSize="@dimen/name_task_text_size"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,10 +22,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="Дата"
+        android:clickable="true"
+        android:hint="@string/date_hint"
         app:boxBackgroundColor="@color/white"
         app:endIconCheckable="true"
-        android:clickable="true"
         app:endIconDrawable="@drawable/ic_date"
         app:endIconMode="custom"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,11 +33,10 @@
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/date_field"
-            android:gravity="center"
-            android:focusable="false"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"/>
-
+            android:layout_height="wrap_content"
+            android:focusable="false"
+            android:gravity="center" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -45,8 +44,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="Начало"
         android:clickable="true"
+        android:hint="@string/start_time_hint"
         app:boxBackgroundColor="@color/white"
         app:endIconCheckable="true"
         app:endIconDrawable="@drawable/ic_time"
@@ -61,7 +60,6 @@
             android:layout_height="wrap_content"
             android:focusable="false"
             android:inputType="time" />
-
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -69,10 +67,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="Окончание"
+        android:clickable="true"
+        android:hint="@string/end_time_hint"
         app:boxBackgroundColor="@color/white"
         app:endIconCheckable="true"
-        android:clickable="true"
         app:endIconDrawable="@drawable/ic_time"
         app:endIconMode="custom"
         app:layout_constraintEnd_toEndOf="parent"
@@ -85,7 +83,6 @@
             android:layout_height="wrap_content"
             android:focusable="false"
             android:inputType="time" />
-
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -94,7 +91,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:hint="Описание"
+        android:hint="@string/description_field_hint"
         app:boxBackgroundColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/end_time">
 
@@ -103,8 +100,5 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textImeMultiLine" />
-
     </com.google.android.material.textfield.TextInputLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
