--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="10dp"
         android:ellipsize="end"
         android:maxLines="1"
-        android:textSize="28sp"
+        android:textSize="@dimen/current_date_text_size"
         app:layout_constraintEnd_toStartOf="@+id/next_date"
         app:layout_constraintStart_toEndOf="@id/back_date"
         app:layout_constraintTop_toTopOf="parent"
@@ -48,15 +48,12 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/current_date">
 
-
-            <com.a5k.tasksheduler.ui.view.CalendarViewGroup
-                android:id="@+id/container_mm"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical" />
-
+        <com.a5k.tasksheduler.ui.view.CalendarViewGroup
+            android:id="@+id/calendar_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical" />
     </androidx.core.widget.NestedScrollView>
-
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_task"
@@ -67,5 +64,4 @@
         app:backgroundTint="@color/blue_cream"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
