--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="graph_height">400dp</dimen>
     <dimen name="margin_top_graph">30dp</dimen>
     <dimen name="task_height">700dp</dimen>
+    <dimen name="name_task_text_size">24sp</dimen>
+    <dimen name="current_date_text_size">28sp</dimen>
 </resources>
